k8s/apps/nextcloud/endpoints-admin.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: nextcloud-admin
  namespace: nextcloud
  labels:
    kubernetes.io/service-name: nextcloud-admin
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.9
    conditions:
      ready: true
ports:
  - port: 8080
    protocol: TCP
