k8s/apps/nextcloud/endpoints.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: nextcloud-external
  namespace: nextcloud
  labels:
    kubernetes.io/service-name: nextcloud-external
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.9
    conditions:
      ready: true
ports:
  - port: 11000
    protocol: TCP
