k8s/apps/nextcloud/service-admin.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-admin
  namespace: nextcloud
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
