k8s/apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-external
  namespace: nextcloud
spec:
  ports:
    - port: 11000
      targetPort: 11000
      protocol: TCP
