k8s/apps/nextcloud/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-admin
  namespace: nextcloud
spec:
  ingressClassName: traefik
  rules:
    - host: nextcloudadmin.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud-admin
                port:
                  number: 8080
